<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SNRTools</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="string_settings">Settings</string>
    <string name="string_progressmsg1">Communicate with device&#8230;</string>
    <string name="string_progressmsg2">Downloading</string>
    <string name="string_progressmsg3">Connecting device</string>
    <string name="string_more">More</string>
    <string name="string_shouqi">Close</string>
    <string name="string_search">Search</string>
    <string name="string_ok">OK</string>
    <string name="string_cancel">Cancel</string>
    <string name="string_research">Search again</string>
    <string name="string_bluetooth_search">Go bluetooth</string>
    <string name="string_stop">Stop</string>
    <string name="string_loading">Loading&#8230;</string>
    <string name="string_exit_app">Is exit app？</string>
    <string name="string_zlql">Reset Total</string>
    <string name="string_ypp">Matched</string>
    <string name="string_menu_msg1">Real-time monitor, parameter Settings</string>
    <string name="string_menu_msg2">Tel:025&#8211;58008686\nFax:025&#8211;86167199\nEmail:sinier@sinier.com.cn\nAddr:Nanjing Jiangning district Guli Science and technology industrial park XingGu road no. 6</string>
    <string name="string_menu1">New Features</string>
    <string name="string_menu2">About</string>
    <string name="string_menu3">Update</string>
    <string name="string_menu4">Clear cache</string>
    <string name="string_menu5">Exit</string>
    <string name="string_error_msg1">Server update version number error！</string>
    <string name="string_error_msg2">DownLoad failed！</string>
    <string name="string_error_msg3">Connect timeout！</string>
    <string name="string_error_msg4">Read params failed,Please retry！</string>
    <string name="string_error_msg5">Password error！</string>
    <string name="string_error_msg6">ResetTotal password error！</string>
    <string name="string_error_msg7">ResetTotal failed,Please retry！</string>
    <string name="string_error_msg8">Read data timeout！</string>
    <string name="string_error_msg9">No device to connect, please choose device again！</string>
    <string name="string_error_msg10">Connection has been disconnected, please reconnect！</string>
    <string name="string_error_msg11">Write parameter timeout！</string>
    <string name="string_error_msg12">Device connection has been disconnected, please reconnect</string>
    <string name="string_error_msg13">Connection device address does not exist！</string>
    <string name="string_error_msg14">Connected to the device failure, please connect again！</string>
    <string name="string_error_msg15">Communication with the device congestion, failed！</string>
    <string name="string_tips_msg1">Latest version！</string>
    <string name="string_tips_msg2">Obtainning&#8230;</string>
    <string name="string_tips_msg3">No devices can be connected</string>
    <string name="string_tips_msg4">Select device</string>
    <string name="string_tips_msg5">Whether connect</string>
    <string name="string_tips_msg6">If there is no search result, please search in the mobile phone bluetooth. \ n Use application to search again after match successed .</string>
    <string name="string_tips_msg7">No bluetooth device</string>
    <string name="string_tips_msg8">Please enter a value！</string>
    <string name="string_tips_msg9">Value cannot be more than</string>
    <string name="string_tips_msg10">Value can not less than</string>
    <string name="string_tips_msg11">Communicating with device&#8230;</string>
    <string name="string_tips_msg12">Please enter the password！</string>
    <string name="string_tips_msg13">ResetTotal success！</string>
    <string name="string_tips_msg14">Bluetooth device not detected, please retry after switch bluetooth！</string>
    <string name="string_tips_msg15">Start sending command！</string>
    <string name="string_tips_msg16">Connected success！</string>
    <string name="string_alarm_llsx">Alm-Flow High</string>
    <string name="string_alarm_llxx">Alm-Flow Low</string>
    <string name="string_alarm_lcyc">Alm-Exct</string>
    <string name="string_alarm_kgbj">Alm-Emp Pipe</string>
    <string name="string_main_label_ssll">PV:</string>
    <string name="string_main_label_ljll">Total Flow:</string>
    <string name="string_main_label_ssls">Instantaneous Flow Rate:</string>
    <string name="string_main_label_llbfb">Flow Percentage:</string>
    <string name="string_main_label_kgb">MTP:</string>
    <string name="string_main_label_zxlj">Positive Cumulative Value:</string>
    <string name="string_main_label_fxlj">Reverse Cumulative Value:</string>
    <string name="string_title1">View Parameters</string>
    <string name="string_title2">Set Parameters</string>
    <string name="string_title3">Password checking</string>
    <string name="string_tab1">Monitor</string>
    <string name="string_tab2">Parameter</string>
    <string name="string_hint1">Range</string>
    <string name="string_hint2">Please enter the password</string>
    <string name="string_param_type1">Basic Setup</string>
    <string name="string_param_type2">Advanced Setup</string>
    <string name="string_param_type3">Sensor Setup</string>
    <string name="string_param_type4">Converter Setup</string>
    <string name="string_param_label1">Language</string>
    <string name="string_param_label2">Flow Unit</string>
    <string name="string_param_label3">Flow Span</string>
    <string name="string_param_label4">Flow Direction</string>
    <string name="string_param_label5">Invert Output</string>
    <string name="string_param_label6">Total Unit</string>
    <string name="string_param_label7">Flow Damping</string>
    <string name="string_param_label8">Low Flow Cutoff</string>
    <string name="string_param_label9">Pulse Output Mode</string>
    <string name="string_param_label10">Value Per Pulse</string>
    <string name="string_param_label11">Pulse Width</string>
    <string name="string_param_label12">Max. Pulse Rate</string>
    <string name="string_param_label13">FlowSpeedZero</string>
    <string name="string_param_label14">Backlight Time</string>
    <string name="string_param_label15">MBS address</string>
    <string name="string_param_label16">MBS Rate</string>
    <string name="string_param_label17">Device Serial No.</string>
    <string name="string_param_label18">Nominal Size</string>
    <string name="string_param_label19">Cutoff Visiable</string>
    <string name="string_param_label20">Sensor Coefficient</string>
    <string name="string_param_label21">Alm-Emp Pipe</string>
    <string name="string_param_label22">Limit Empty Pipe</string>
    <string name="string_param_label23">Alm-Flow High</string>
    <string name="string_param_label24">Limit High Alarm</string>
    <string name="string_param_label25">Alm-Flow Low</string>
    <string name="string_param_label26">Limit Low Alarm</string>
    <string name="string_param_label27">Alm-Exct</string>
    <string name="string_param_label28">Forward Total</string>
    <string name="string_param_label29">Reverse Total</string>
    <string name="string_param_label30">Base Password</string>
    <string name="string_param_label31">Advance Password</string>
    <string name="string_param_label32">ResetTotal Password</string>
    <string name="string_param_label33">FlowRateCompa</string>
    <string name="string_param_label34">FlowComNum1</string>
    <string name="string_param_label35">FlowComNum2</string>
    <string name="string_param_label36">FlowComVal2</string>
    <string name="string_param_label37">FlowComNum3</string>
    <string name="string_param_label38">FlowComVal3</string>
    <string name="string_param_label39">FlowComNum4</string>
    <string name="string_param_label40">FlowComVal4</string>
    <string name="string_param_label41">FlowComNum5</string>
    <string name="string_param_label42">FlowComVal5</string>
    <string name="string_param_label43">FlowComNum6</string>
    <string name="string_param_label44">FlowComVal6</string>
    <string name="string_param_label45">FlowComNum7</string>
    <string name="string_param_label46">FlowComVal7</string>
    <string name="string_param_label47">FlowComNum8</string>
    <string name="string_param_label48">FlowComVal8</string>
    <string name="string_param_label49">Exct Mode</string>
    <string name="string_param_label50">Exct Current</string>
    <string name="string_param_label51">PeakRestrain</string>
    <string name="string_param_label52">PeakRestrainFactor</string>
    <string name="string_param_label53">PeakRestrainTime</string>
    <string name="string_param_label54">Sensor No</string>
    <string name="string_param_label55">Sensor Password</string>
    <string name="string_param_label56">ConSlope</string>
    <string name="string_param_label57">ConOffset</string>
    <string name="string_param_label58">EmptyPipeZero Trimming</string>
    <string name="string_param_label59">0mA Trimming</string>
    <string name="string_param_label60">20mA Trimming</string>
    <string name="string_param_label61">Electronic Serial No.</string>
    <string name="string_param_label62">Converter Password</string>
    <string name="string_param1">Forward</string>
    <string name="string_param2">Reverse</string>
    <string name="string_param3">Enable</string>
    <string name="string_param4">Inhibit</string>
    <string name="string_param5">Pulse</string>
    <string name="string_param6">Freq</string>
    <string name="string_param7">ON</string>
    <string name="string_param8">Frequency</string>

</resources>