<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#168FF2"
    android:orientation="vertical" >

    <Button
        android:id="@+id/textView1"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:background="@drawable/bg_titlebar"
        android:gravity="left|center_vertical"
        android:onClick="onClick"
        android:paddingLeft="5dp"
        android:text="@string/string_menu1"
        android:textColor="#ffffff"
        android:textSize="16sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#B9FFE6" />

    <Button
        android:id="@+id/textView2"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:background="@drawable/bg_titlebar"
        android:gravity="left|center_vertical"
        android:onClick="onClick"
        android:paddingLeft="5dp"
        android:text="@string/string_menu2"
        android:textColor="#ffffff"
        android:textSize="16sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#B9FFE6" />

    <Button
        android:id="@+id/textView3"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:background="@drawable/bg_titlebar"
        android:gravity="left|center_vertical"
        android:onClick="onClick"
        android:paddingLeft="5dp"
        android:text="@string/string_menu3"
        android:textColor="#ffffff"
        android:textSize="16sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#B9FFE6" />

    <Button
        android:id="@+id/textView5"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:background="@drawable/bg_titlebar"
        android:gravity="left|center_vertical"
        android:onClick="onClick"
        android:paddingLeft="5dp"
        android:text="@string/string_menu4"
        android:textColor="#ffffff"
        android:textSize="16sp" />
        <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#B9FFE6" />

    <Button
        android:id="@+id/textView4"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:background="@drawable/bg_titlebar"
        android:gravity="left|center_vertical"
        android:onClick="onClick"
        android:paddingLeft="5dp"
        android:text="@string/string_menu5"
        android:textColor="#ffffff"
        android:textSize="16sp" />

</LinearLayout>